--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
   package="org.medicine">
 
   <application
-    android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.Medicine">
+    android:theme="@style/Theme.Main">
 
     <activity
       android:name="org.medicine.MainActivity"
       android:exported="true"
       android:label="@string/app_name"
-      android:theme="@style/Theme.Medicine.NoActionBar">
+      android:theme="@style/Theme.Main.NoActionBar">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
