--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
   id "com.android.application"
   id "kotlin-android"
+  id "kotlin-parcelize"
+  id "kotlin-kapt"
+  id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -79,6 +82,11 @@ dependencies {
   implementation "androidx.compose.material:material-icons-extended:$composeVersion"
   implementation "androidx.compose.ui:ui:$composeVersion"
   implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
-
   debugImplementation "androidx.compose.ui:ui-tooling:$composeVersion"
+
+  implementation "com.google.dagger:hilt-android:$hiltVersion"
+  kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+  implementation "androidx.hilt:hilt-navigation-compose:$hiltNavigationComposeVersion"
+
+  implementation project(":schedule")
 }
