--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ rootProject.name = "Medicine"
 include ":app"
 include ":schedule"
 include ":source"
+include ":tools"
 
 project(":schedule").projectDir = new File(rootDir, "Medicine-Schedule")
 project(":source").projectDir = new File(rootDir, "Medicine-Source")
