Update overview screen.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
 
   implementation project(":schedule")
   implementation project(":source")
+  implementation project(":tools")
 }
