--- a/settings.gradle
+++ b/settings.gradle
@@ -6,11 +6,11 @@ dependencyResolutionManagement {
   }
 }
 
-rootProject.name = "Medicine"
+rootProject.name = "MedicalTherapy"
 include ":app"
 include ":schedule"
 include ":source"
 include ":tools"
 
-project(":schedule").projectDir = new File(rootDir, "Medicine-Schedule")
-project(":source").projectDir = new File(rootDir, "Medicine-Source")
+project(":schedule").projectDir = new File(rootDir, "MedicalTherapy-Schedule")
+project(":source").projectDir = new File(rootDir, "MedicalTherapy-Source")
