Integrate reel date picker.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
   implementation project(":schedule")
   implementation project(":source")
   implementation project(":tools")
+
+  implementation project(":reeldatepicker")
 }
