--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     buildToolsVersion = "31.0.0"
 
     kotlinVersion = "1.5.31"
-    hiltVersion = "2.37"
+    hiltVersion = "2.40.2"
 
     // App dependencies
     desugarJdkVersion = "1.1.5"
@@ -17,14 +17,14 @@ buildscript {
     coroutinesVersion = "1.5.2"
     coreKtxVersion = "1.7.0"
 
-    appCompatVersion = "1.3.1"
+    appCompatVersion = "1.4.0"
     materialVersion = "1.4.0"
     lifecycleVersion = "2.4.0"
 
     activityComposeVersion = "1.4.0"
     navigationComposeVersion = "2.4.0-beta02"
-    hiltNavigationComposeVersion = "1.0.0-alpha03"
-    constraintlayoutComposeVersion = "1.0.0-rc01"
+    hiltNavigationComposeVersion = "1.0.0-beta01"
+    constraintlayoutComposeVersion = "1.0.0-rc02"
     composeVersion = "1.0.5"
 
     persistentRoomVersion = "2.3.0"
