--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,12 @@ buildscript {
 
     appCompatVersion = "1.4.0"
     materialVersion = "1.4.0"
+    systemUIControllerVersion = "0.17.0"
     lifecycleVersion = "2.4.0"
 
     activityComposeVersion = "1.4.0"
-    navigationComposeVersion = "2.4.0-beta02"
-    hiltNavigationComposeVersion = "1.0.0-beta01"
+    navigationComposeVersion = "2.4.0-rc01"
+    hiltNavigationComposeVersion = "1.0.0-rc01"
     constraintlayoutComposeVersion = "1.0.0-rc02"
     composeVersion = "1.0.5"
 
