--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
   <application
     android:name=".MainApplication"
+    android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,7 +15,7 @@
       android:name="org.medicine.MainActivity"
       android:exported="true"
       android:label="@string/app_name"
-      android:theme="@style/Theme.Main.NoActionBar">
+      android:theme="@style/Theme.Main">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
