--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -11,7 +11,6 @@ android {
     minSdk androidMinSdkVersion
     targetSdk androidTargetSdkVersion
 
-
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     vectorDrawables {
@@ -46,4 +45,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
   implementation "androidx.core:core-ktx:$coreKtxVersion"
+
+  testImplementation "junit:junit:4.13.2"
+  testImplementation "androidx.test:core:1.4.0"
 }
