Update gradle config.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
   implementation project(":schedule")
   implementation project(":source")
   implementation project(":tools")
+
+  testImplementation "junit:junit:4.13.2"
+  testImplementation "androidx.test:core:1.4.0"
 }
