--- a/build.gradle
+++ b/build.gradle
@@ -17,18 +17,18 @@ buildscript {
     coroutinesVersion = "1.5.2"
     coreKtxVersion = "1.7.0"
 
-    appCompatVersion = "1.4.0"
-    materialVersion = "1.4.0"
+    appCompatVersion = "1.4.1"
+    materialVersion = "1.5.0"
     systemUIControllerVersion = "0.17.0"
     lifecycleVersion = "2.4.0"
 
     activityComposeVersion = "1.4.0"
     navigationComposeVersion = "2.4.0-rc01"
     hiltNavigationComposeVersion = "1.0.0-rc01"
-    constraintlayoutComposeVersion = "1.0.0-rc02"
+    constraintlayoutComposeVersion = "1.0.0"
     composeVersion = "1.0.5"
 
-    persistentRoomVersion = "2.4.0"
+    persistentRoomVersion = "2.4.1"
 
     gsonVersion = "2.8.6"
   }
