--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "buildSrc"]
+	path = buildSrc
+	url = dmitriykhalturin.github.com:DmitriyKhalturin/buildSrc.git
+
 [submodule "MedicalTherapy-Schedule"]
 	path = MedicalTherapy-Schedule
 	url = dmitriykhalturin.github.com:DmitriyKhalturin/MedicalTherapy-Schedule.git
