Move tools to git submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,10 @@
 	path = buildSrc
 	url = dmitriykhalturin.github.com:DmitriyKhalturin/buildSrc.git
 
+[submodule "WearTools"]
+	path = WearTools
+	url = dmitriykhalturin.github.com:DmitriyKhalturin/WearTools.git
+
 [submodule "MedicalTherapy-Schedule"]
 	path = MedicalTherapy-Schedule
 	url = dmitriykhalturin.github.com:DmitriyKhalturin/MedicalTherapy-Schedule.git
