Clear android manifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   package="org.medicine">
 
   <application
@@ -8,14 +9,15 @@
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/Theme.Main">
+    android:supportsRtl="false"
+    android:theme="@style/Theme.Main"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    tools:targetApi="s"
+    tools:ignore="DataExtractionRules">
 
     <activity
       android:name="org.medicine.MainActivity"
-      android:exported="true"
-      android:label="@string/app_name"
-      android:theme="@style/Theme.Main">
+      android:exported="true">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
